[Win] Warning fixes. https://bugs.webkit.org/show_bug.cgi?id=161241

Reviewed by Brent Fulgham.

MSVC warns about potential use of uninitialized variables.

* accessibility/AXObjectCache.cpp:
* css/parser/CSSParserValues.cpp:


Canonical link: https://commits.webkit.org/179401@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205025 268f45cc-cd09-0410-ab3c-d52691b4dbfc