Source/WebCore/accessibility/AXObjectCache.cpp
@@ -100,6 +100,11 @@
 #include "MediaControlElements.h"
 #endif
 
+#if COMPILER(MSVC)
+// See https://msdn.microsoft.com/en-us/library/1wea5zwe.aspx
+#pragma warning(disable: 4701)
+#endif
+
 namespace WebCore {
 
 using namespace HTMLNames;
