Source/WebCore/css/parser/CSSParserValues.cpp
@@ -29,6 +29,11 @@
 #include "CSSVariableValue.h"
 #include "SelectorPseudoTypeMap.h"
 
+#if COMPILER(MSVC)
+// See https://msdn.microsoft.com/en-us/library/1wea5zwe.aspx
+#pragma warning(disable: 4701)
+#endif
+
 namespace WebCore {
 
 using namespace WTF;
